--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,33 @@ a {
     transition: opacity 300ms ease;
 }
 
+i:hover {
+    opacity: .7;
+}
+
+.link__hover-effect:after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    background-color: black;
+    width: 0%;
+    bottom: -3px;
+    left: 0;
+    transition: all 300ms ease;
+}
+
+.link__hover-effect--white:after {
+    background-color: #fff;
+}
+.link__hover-effect--black:after {
+    background-color: #000;
+}
+
+.link__hover-effect:hover:after {
+    width: 100%;
+    right: 0;
+}
+
 li {
     list-style-type: none;
 }
@@ -100,6 +127,9 @@ nav {
     color: white;
     transition: all 300ms ease;
 }
+.nav__link--anchor-primary:hover {
+    background-color: #7f1639;
+}
 
 .personal__logo {
     font-size: 28px;
@@ -161,6 +191,7 @@ nav {
     flex: 1;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .about-me__img {
@@ -172,7 +203,15 @@ nav {
 .language__img {
     width: 100%;
     max-width: 100px;
+        transition: all 300ms ease;
 }
+
+.language:hover .language__img {
+    filter: brightness(80%);
+    opacity: .86;
+    transform: scale(.9);
+    }
+
 
 .language {
     width: 25%;
@@ -197,5 +236,100 @@ nav {
 .language__name {
     position: absolute;
     bottom: 0;
+    transform: scale(0);
+    transition: all 300ms
 }
 
+.language:hover .language__name {
+ transform: scale(1);   
+}
+
+
+/* PROJECTS */
+
+.project {
+    margin-bottom: 100px;
+}
+
+.project:last-child {
+    margin-bottom: 50px;
+} 
+
+.project__img {
+    width: 100%;
+    transition: all 500ms ease;
+}
+
+.project__wrapper {
+    display: flex;
+    box-shadow: 0 20px 80px black;
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.project:hover .project__wrapper:before {
+    opacity: 0.7;
+}
+
+.project__wrapper:before {
+   content: "" ; 
+   position: absolute;
+   top: 0;
+   left: 0;
+   height: 100%;
+   width: 100%;
+   background-color: #1c1d25;
+   opacity: 0;
+   transition: opacity 450ms ease;
+   z-index: 2;
+}
+
+
+.project__list {
+    padding-top: 40px;
+}
+
+.project__description {
+ top: 50%;
+ left: 90px;
+ transform: translateY(100%);
+ max-width: 550px; 
+ z-index: 3; 
+ opacity: 0;
+ transition: transform 450ms, opacity 300ms ease;
+}
+
+.project__description--title {
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+.project__description--para {
+    margin: 16px 0;
+}
+
+.project__description--link {
+    font-size: 30px;
+ 
+}
+
+.project:hover .project__img {
+    transform: scale(1.07);
+    filter: blur(5px);
+    opacity: .5;
+}
+
+.project:hover .project__description {
+    opacity: 1;
+    transform: translateY(-125%);
+}
+
+.project__description--title,
+.project__description--sub-title,
+.project__description--para,
+.project__description--links {
+    text-align: left;
+    margin-left: 30px;
+    color: #310c21;
+}
