--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,14 @@ h1, h2, h3, h4, h5 ,h6, span {
     line-height: 1.25;
 }
 
+h1 {
+    font-size: 48px;
+}
+
 p {
     line-height: 1.5;
     font-size: 18px;
+    font-weight: 600;
 }
 
 a {
@@ -63,12 +68,10 @@ li {
     display: flex;
 }
 
-.flex-1 {
-    flex: 1;
-}
+
 
 .text--rose {
-    color:rgb(140, 77, 88) ;
+    color:#9f1757 ;
 }
 
 .row {
@@ -106,7 +109,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 12px;
+    padding: 0 12px ;
 }
 
 .nav__link--list{
@@ -121,7 +124,7 @@ nav {
 }
 
 .nav__link--anchor-primary{
-    background-color: rgb(140, 77, 88);
+    background-color: #9f1757;
     padding: 8px 20px;
     border-radius: 50px;
     color: white;
@@ -133,7 +136,7 @@ nav {
 
 .personal__logo {
     font-size: 28px;
-    color: rgb(140, 77, 88);
+    color:#9f1757;
     font-weight: 700;
 }
 
@@ -155,11 +158,24 @@ nav {
     max-width: 600px;
     padding-bottom: 28px;
     margin: 0 auto;
+    margin-top: 20px;
 }
 
 .about-me__picture {
     width: 100%;
     transform: scale(1.1);
+}
+
+@keyframes animate-picture {
+    0% {
+        transform: scale(0);
+    }
+    80% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 .about-me__picture--mask {
@@ -169,6 +185,7 @@ nav {
     overflow: hidden;
     box-shadow: 0 8px 16px rgba(0,0,0, .16);
     margin-bottom: 20px;
+    animation: animate-picture 800ms 20ms backwards;
 }
 
 .row {
@@ -182,13 +199,32 @@ nav {
     margin-bottom: 18px;
 }
 
+.wave {
+    display: inline-block;
+    padding-left: 12px;
+    animation: animate-wave 300ms infinite 400ms ease;
+}
+
+
+@keyframes animate-wave {
+    0% {
+        transform: rotate(0);
+    }
+    50% { 
+        transform: rotate(15deg);
+    }
+    100% {
+        transform: rotate(0)
+    } 
+}
+
 .about-me__info--para {
     font-size: 20px;
     margin-bottom: 28px;
 }   
 
 .about-me__img--container {
-    flex: 1;
+    padding-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -203,12 +239,12 @@ nav {
 .language__img {
     width: 100%;
     max-width: 100px;
-        transition: all 300ms ease;
+    transition: all 300ms ease;
 }
 
 .language:hover .language__img {
     filter: brightness(80%);
-    opacity: .86;
+    opacity: .75;
     transform: scale(.9);
     }
 
@@ -216,7 +252,7 @@ nav {
 .language {
     width: 25%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     position: relative;
 }
 
@@ -248,7 +284,7 @@ nav {
 /* PROJECTS */
 
 .project {
-    margin-bottom: 100px;
+    margin-bottom: 135px;
 }
 
 .project:last-child {
@@ -262,14 +298,13 @@ nav {
 
 .project__wrapper {
     display: flex;
-    box-shadow: 0 20px 80px black;
+    width: 100%;
+    max-width: 1300px;
+    box-shadow: 0 20px 80px rgba(105, 21, 58, 0.45);
     border-radius: 20px;
     overflow: hidden;
     position: relative;
-}
 
-.project:hover .project__wrapper:before {
-    opacity: 0.7;
 }
 
 .project__wrapper:before {
@@ -279,30 +314,35 @@ nav {
    left: 0;
    height: 100%;
    width: 100%;
-   background-color: #1c1d25;
+   background-color: #6a073fad;
    opacity: 0;
    transition: opacity 450ms ease;
    z-index: 2;
+  
 }
 
+.project:hover .project__wrapper:before {
+    opacity: 1;
+    transform: translateY(100%);
+}
 
 .project__list {
     padding-top: 40px;
 }
 
 .project__description {
+ position: absolute;
  top: 50%;
  left: 90px;
  transform: translateY(100%);
  max-width: 550px; 
  z-index: 3; 
  opacity: 0;
- transition: transform 450ms, opacity 300ms ease;
+ transition: transform 450ms, opacity 1200ms ease;
 }
 
 .project__description--title {
     font-size: 40px;
-    margin-bottom: 20px;
 }
 
 .project__description--para {
@@ -310,26 +350,85 @@ nav {
 }
 
 .project__description--link {
-    font-size: 30px;
- 
-}
-
-.project:hover .project__img {
-    transform: scale(1.07);
-    filter: blur(5px);
-    opacity: .5;
+    font-size: 20px;
+    margin-right: 16px;
 }
 
 .project:hover .project__description {
     opacity: 1;
-    transform: translateY(-125%);
+    transform: translateY(-50%); 
+}
+
+.project:hover .project__img {
+    transform: scale(1.07);
+    filter: blur(10px);   
 }
 
 .project__description--title,
 .project__description--sub-title,
 .project__description--para,
-.project__description--links {
+.project__description--link {
     text-align: left;
     margin-left: 30px;
     color: #310c21;
+}
+
+/* FOOTER */
+
+footer {
+  background-color: #310c21;
+}
+
+.footer__anchor {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+    transform: translateX(60px);
+    opacity: 1;
+}
+
+.footer__logo {
+   
+}
+
+
+.footer__logo--img {
+  width: 70px;
+    height: 70px;
+}
+
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: 300ms ease;
+    color: #f8f8f8;
+}
+
+.footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5% 0 
+}
+
+.footer__social--list {
+    width: 100%;
+    max-width: 800px;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 28px;
+}
+
+.footer__social--link {
+    color: #f8f8f8;
+}
+
+.footer__copyright {
+    color: #f8f8f8;
 }
